--- a/Assignment 4/Assignment 4/Assignment_4.1
+++ b/Assignment 4/Assignment 4/Assignment_4.1
@@ -4,10 +4,10 @@
 .\"man mdoc for the short list of editing options
 .\"/usr/share/misc/mdoc.template
 .Dd 2014-08-08               \" DATE 
-.Dt Testing 1      \" Program name and manual section number 
+.Dt Assignment 4 1      \" Program name and manual section number 
 .Os Darwin
 .Sh NAME                 \" Section Header - required - don't modify 
-.Nm Testing,
+.Nm Assignment 4,
 .\" The following lines are read in generating the apropos(man -k) database. Use only key
 .\" words here as the database is built based on the words here and in the .ND line. 
 .Nm Other_name_for_same_program(),
